fixed header line height on mobile

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -28,17 +28,24 @@ main {
   max-width: 60em;
   margin: 0 auto;
 }
+h1 {
+  font-family: "Open Sans Condensed", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Helvetica, Arial, sans-serif;
+  margin: 0 1rem;
+  line-height: 1;
+}
+@media screen and (min-width: 660px) {
+  h1 {
+    line-height: 1.5;
+  }
+}
 form {
   max-width: 250px;
   margin: 0 auto;
 }
-
-p,
-pre,
-code {
+p {
   line-height: 1.5;
 }
-
 a[href],
 a[href]:visited {
   color: var(--links);
@@ -62,22 +69,6 @@ main {
 img {
   width: 100%;
   height: auto;
-}
-pre {
-  font-size: 14px;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  -moz-tab-size: 2;
-  tab-size: 2;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
-  padding: 1em;
-  margin: 0.5em 0;
 }
 header {
   max-width: 60em;
